@@ -1,3 +1,22 @@
+/*
+ * Copyright (C) 2025 Frachtwerk GmbH, Leopoldstraße 7C, 76133 Karlsruhe.
+ *
+ * This file is part of essencium-backend.
+ *
+ * essencium-backend is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * essencium-backend is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with essencium-backend. If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package de.frachtwerk.essencium.backend.model.representation;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -79,8 +98,8 @@ class BasicRepresentationTest {
     List<BasicRepresentation> basicRepresentations = BasicRepresentation.from(List.of(mock));
     assertNotNull(basicRepresentations);
     assertEquals(1, basicRepresentations.size());
-    assertEquals(42L, basicRepresentations.get(0).id());
-    assertEquals("name", basicRepresentations.get(0).name());
+    assertEquals(42L, basicRepresentations.getFirst().id());
+    assertEquals("name", basicRepresentations.getFirst().name());
   }
 
   @Test
@@ -116,8 +135,8 @@ class BasicRepresentationTest {
     List<BasicRepresentation> basicRepresentations = BasicRepresentation.from(Set.of(mock));
     assertNotNull(basicRepresentations);
     assertEquals(1, basicRepresentations.size());
-    assertEquals(42L, basicRepresentations.get(0).id());
-    assertEquals("name", basicRepresentations.get(0).name());
+    assertEquals(42L, basicRepresentations.getFirst().id());
+    assertEquals("name", basicRepresentations.getFirst().name());
   }
 
   @Test
